# Teelov4.0

./: .dockerignore  .env.example  .gitignore  .slugignore  ARCHITECTURE_PLAN.md  CLAUDE.md  Dockerfile  PLAN.md  Procfile  alembic.ini  docker-compose.yml  gemini.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
alembic/: env.py  script.py.mako
alembic/versions/: 20260126_080810_initial_schema_with_unified_matches.py  20260127_091634_add_temporal_order_to_matches.py  20260201_091431_add_match_date_estimated_column.py  20260202_add_draw_position_to_matches.py  20260203_065505_add_player_seed_fields_to_matches.py  20260206_120000_add_pg_trgm_player_aliases.py  20260207_190000_add_tournament_gender.py  20260211_120000_add_inline_elo_state_tables.py  (+4 more)
docs/: WTA_SCRAPER_PLAN.md  elo-operations.md  fix-duplicate-players-plan.md  hourly-update-implementation-spec.md  server-setup-arch.md  server-setup-docker.md
plans/: itf-pipeline.md  update-current-events-db.md  update-current-events.md
scripts/: backfill_historical.py  backfill_tournament_countries.py  build_css.sh  check_schedule_saved.py  create_admin_user.py  deploy_update.sh  enrich_players.py  explore_wta_draws.py  explore_wta_results.py  explore_wta_schedule.py  explore_wta_tournaments.py  find_and_merge_duplicate_players.py  ingest_current_draws.py  optimise_elo.py  rebuild_duplicate_review_queue.py  recover_missing_merge_aliases.py  repair_canonical_player_names.py  repair_winner_ids.py  run_hourly_update.py  server_bootstrap_arch.sh  split_mixed_gender_players.py  test_ao_2024.py  test_atp_dates.py  test_itf_explore.py  test_itf_scrape.py  test_player_enrich.py  test_player_explore.py  test_wta_debug.py  test_wta_explore.py  test_wta_scores.py  test_wta_scrape.py  update_current_events.py  update_elo.py  update_elo_incremental.py  update_players_incremental.py
src/teelo/: config.py  (+3 more)
tests/: __init__.py  conftest.py
(+80 files in other folders)
